@@ -6,7 +6,7 @@ use warnings;
 
 use XML::RSS;
 
-my $rss = new XML::RSS (version => "0.91") ;
+my $rss = XML::RSS->new (version => "0.91") ;
 $rss->channel(title       => "freshmeat.net",
 	      link        => "http://freshmeat.net",
 	      language    => "en", 
