@@ -7,7 +7,7 @@ use warnings;
 
 use XML::RSS;
 
-my $rss = new XML::RSS(version => '0.9');
+my $rss = XML::RSS->new(version => '0.9');
 $rss->channel(title => "freshmeat.net",
 	      link  => "http://freshmeat.net",
 	      description => "the one-stop-shop for all your Linux software needs"
@@ -34,7 +34,7 @@ $rss->textinput(title => "quick finder",
 
 print $rss->as_string;
 
-my $rss = new XML::RSS(version => '0.9');
+my $rss = XML::RSS->new(version => '0.9');
 $rss->channel(title => "freshmeat.net",
 	      link  => "http://freshmeat.net",
 	      description => "the one-stop-shop for all your Linux software needs"
@@ -61,7 +61,7 @@ $rss->textinput(title => "quick finder",
 
 print $rss->as_string;
 
-my $rss2 = new XML::RSS(version => '0.9');
+my $rss2 = XML::RSS->new(version => '0.9');
 $rss2->channel(title => "perlxml.com",
 	      link  => "http://perlxml.com"
 	      );
