@@ -1488,7 +1488,7 @@ XML::RSS - creates and updates RSS files
 
  # create an RSS 1.0 file (http://purl.org/rss/1.0/)
  use XML::RSS;
- my $rss = new XML::RSS (version => '1.0');
+ my $rss = XML::RSS->new(version => '1.0');
  $rss->channel(
    title        => "freshmeat.net",
    link         => "http://freshmeat.net",
@@ -1560,7 +1560,7 @@ XML::RSS - creates and updates RSS files
 
  # create an RSS 2.0 file
  use XML::RSS;
- my $rss = new XML::RSS (version => '2.0');
+ my $rss = XML::RSS->new (version => '2.0');
  $rss->channel(title          => 'freshmeat.net',
                link           => 'http://freshmeat.net',
                language       => 'en',
@@ -1599,7 +1599,7 @@ XML::RSS - creates and updates RSS files
 
  # create an RSS 0.9 file
  use XML::RSS;
- my $rss = new XML::RSS (version => '0.9');
+ my $rss = XML::RSS->new( version => '0.9' );
  $rss->channel(title => "freshmeat.net",
                link  => "http://freshmeat.net",
                description => "the one-stop-shop for all your Linux software needs",
@@ -1628,7 +1628,7 @@ XML::RSS - creates and updates RSS files
 
  # insert an item into an RSS file and removes the oldest ones if
  # there are already 15 items or more
- my $rss = new XML::RSS;
+ my $rss = XML::RSS->new;
  $rss->parsefile("fm.rdf");
 
  while (@{$rss->{'items'}} >= 15)
@@ -1684,8 +1684,7 @@ and requires.
 
 =over 4
 
-=item new XML::RSS (version=>$version, encoding=>$encoding,
-output=>$output, stylesheet=>$stylesheet_url, 'xml:base'=>$base)
+=item XML::RSS->new(version=>$version, encoding=>$encoding, output=>$output, stylesheet=>$stylesheet_url, 'xml:base'=>$base)
 
 Constructor for XML::RSS. It returns a reference to an XML::RSS object.
 You may also pass the RSS version and the XML encoding to use. The default
